add: se agregó la capa de repositorio y servicio para obtener las imágenes por cada DTO del menú web